tests/ui-stable/transmute-mut-src-not-asbytes.stderr
error[E0277]: the trait bound `Src: AsBytes` is not satisfied
  --> tests/ui-stable/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    the trait `AsBytes` is not implemented for `Src`
   |                                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> tests/ui-stable/transmute-mut-src-not-asbytes.rs:24:36
   |
24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    required by a bound in this function
   |                                    required by this bound in `transmute`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
